--- a/website/templates/servers/list.html
+++ b/website/templates/servers/list.html
@@ -1,1 +1,40 @@
-LISTE LISTE
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+    <ol class="breadcrumb breadcrumb-arrow">
+        <li><a href="{% url 'users:home' %}">Home</a></li>
+        <li><span>Servers</span></li>
+    </ol>
+    <div class="row">
+        {% if True or perms.users.view_user %}
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Server list</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>ID</th>
+                                    <th>Show</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for server in servers %}
+                                <tr>
+                                    <td>{{ server.name }}</td>
+                                    <td>{{ server.server_id }}</td>
+                                    <td><a href="{% url 'servers:info' server.server_id %}" class="btn btn-primary" role="button">View Server</a></td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    </div>
+{% endblock %}
