misc (template): handle overflow in server informations

--- a/website/templates/servers/info.html
+++ b/website/templates/servers/info.html
@@ -14,26 +14,28 @@
                     <h3 class="panel-title">{{ server.name }} informations</h3>
                 </div>
                 <div class="panel-body">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>ID</th>
-                                <th>Login</th>
-                                <th>Show</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for member in server.members.all %}
+                    <div style="display: block;max-height: 500px;overflow-y: auto;">
+                        <table class="table">
+                            <thead>
                                 <tr>
-                                    <td> {{ member.username }} </td>
-                                    <td> {{ member.id }}   </td>
-                                    <td> {{ member.login }} </td>
-                                    <td><a href="{% url 'members:profile' member.id %}" class="btn btn-primary" role="button">View User</a></td>
-                                <tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                                    <th>Name</th>
+                                    <th>ID</th>
+                                    <th>Login</th>
+                                    <th>Show</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for member in server.members.all %}
+                                    <tr>
+                                        <td> {{ member.username }} </td>
+                                        <td> {{ member.id }}   </td>
+                                        <td> {{ member.login }} </td>
+                                        <td><a href="{% url 'members:profile' member.id %}" class="btn btn-primary" role="button">View User</a></td>
+                                    <tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
