feat (certify): Now users can certify their accounts with the website

--- a/website/templates/registration/confirm.html
+++ b/website/templates/registration/confirm.html
@@ -15,7 +15,11 @@
 <body>
     <div class="center-div">
         <div class="epilogin-logo"></div>
-    </div>
+
+        <div class="confirm">
+            Tout est bon, vous aurez bientot l'acces au serveur.
+        </div>
+    </div>    
 </body>
 
 </html>
