--- a/website/static/css/login.css
+++ b/website/static/css/login.css
@@ -11,12 +11,45 @@ html {
 
 .button {
     font-size: 16px;
-    border-radius: 3px;
     display: inline-block;
     padding: 10px 0px;
     width: 100%;
     text-decoration: none;
     font-family: 'Source Code Pro', monospace;
+}
+
+.cgu {
+    font-size: 12px;
+    display: inline-block;
+    padding: 5px 0px 0px 0px;
+    width: 100%;
+    text-decoration: none;
+    font-family: 'Source Code Pro', monospace;
+
+    background-color: var(--color-light);
+    color: var(--color-very-dark);
+    -o-transition: color .2s ease-out, background 0.2s ease-in;
+    -ms-transition: color .2s ease-out, background 0.2s ease-in;
+    -moz-transition: color .2s ease-out, background 0.2s ease-in;
+    -webkit-transition: color .2s ease-out, background 0.2s ease-in;
+    transition: color .2s ease-out, background 0.2s ease-in;
+}
+
+.confirm {
+    font-size: 12px;
+    display: inline-block;
+    padding: 20px 0px 20px 0px;
+    width: 100%;
+    text-decoration: none;
+    font-family: 'Source Code Pro', monospace;
+
+    background-color: var(--color-light);
+    color: var(--color-very-dark);
+    -o-transition: color .2s ease-out, background 0.2s ease-in;
+    -ms-transition: color .2s ease-out, background 0.2s ease-in;
+    -moz-transition: color .2s ease-out, background 0.2s ease-in;
+    -webkit-transition: color .2s ease-out, background 0.2s ease-in;
+    transition: color .2s ease-out, background 0.2s ease-in;
 }
 
 a {
@@ -44,7 +77,7 @@ a:hover {
     margin-top: -100px;
 }
 
-.backtobasics-logo {
+.epilogin-logo {
     background: url("/static/img/favicon.png") center center no-repeat;
     background-size: 260px;
     height: 120px;
