misc (RGPD): added a message about the use of personal data

--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -16,9 +16,10 @@
     <div class="center-div">
         <div class="epilogin-logo"></div>
 
-        <div class="cgu">
-            <p><input type="checkbox" onchange="toggleLink(this);">
-                J'ai lu et j'accepte les <a href="/static/CGU.html">CGU</a>
+        <div class="cgu row">
+            <p>
+                <input type="checkbox" onchange="toggleLink(this);">
+                J'ai lu et j'accepte les <a href="/static/CGU.html">CGU</a> et l'utilisation de mes données tel que decrit dans les CGU.
             </p>
         </div>
 
