--- a/website/templates/users/index.html
+++ b/website/templates/users/index.html
@@ -144,12 +144,12 @@
 					<div class="col">
 						<h4 class="mg-md text-sm-left text-center tc-white h4-style">
 							À propos
-						</h4><a href="/team" class="a-btn a-block footer-link">L'équipe</a><a href="mailto:contact@epilogin.fr" class="a-btn a-block footer-link">Nous contacter</a>
+						</h4><a href="" class="a-btn a-block footer-link">L'équipe</a><a href="mailto:contact@epilogin.fr" class="a-btn a-block footer-link">Nous contacter</a>
 					</div>
 					<div class="col">
 						<h4 class="mg-md text-sm-left text-center tc-white h4-mentions-style">
 							Mentions légales
-						</h4><a href="/cgu" class="a-btn a-block footer-link">Conditions d'utilisation</a> <a href="/privacy" class="a-btn a-block footer-link">Confidentialité &amp; RGPD</a>
+						</h4><a href="https://epilogin.fr/static/CGU.html" class="a-btn a-block footer-link">Conditions d'utilisation</a> <!--<a href="/privacy" class="a-btn a-block footer-link">Confidentialité &amp; RGPD</a>-->
 					</div>
 					<div class="col offset-lg--1">
 						<h4 class="mg-md text-sm-left text-center tc-white h4-nous-style">
